--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -58,6 +58,7 @@
           color: $primary-dark-blue;
           font-size: $primary-third;
           padding-left: 24px;
+          cursor: pointer;
         }
         & .help {
           padding: 16px 32px;
