Add Hero Section

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,12 @@
 $primary-dark-blue: #202053;
-$primary-hover-blue: #4A86FF;
-$primary-button-red: #EF3959;
-$primary-button-shadow: rgba(239, 57, 89, 0.40);
+$primary-hover-blue: #4a86ff;
+$primary-button-red: #ef3959;
+$primary-button-shadow: rgba(239, 57, 89, 0.4);
 $primary-white: #ffffff;
+$primary-subTitile-gray: #404040;
+$primary-gradient: linear-gradient(
+  94deg,
+  #4a86ff 3.11%,
+  #f5f5f5 50.76%,
+  #ef3959 98.4%
+);
