--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,6 @@ $primary-first: 35px;
 $primary-secondary: 15px;
 $primary-third: 20px;
 $primary-four: 24px;
+$primary-title: 64px;
+$primary-subTitle: 30px;
+$primary-button-size: 36px;
