--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,6 +1,24 @@
+@import "colors";
+
 @mixin mainContainer {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 40px;
+}
+
+@mixin mainButton {
+  max-width: 442px;
+  border: 3px solid;
+  border-image-source: $primary-gradient;
+  border-image-slice: 1;
+  padding: 21px 82px;
+  line-height: 120%;
+  background: transparent;
+  color: $primary-button-red;
+  font: {
+    size: $primary-button-size;
+    weight: 600;
+  }
+  border-radius: 25px 25px 25px 0px;
 }
