--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,74 +1,11 @@
-@import "fonts";
 @import "mixins";
 @import "reset";
 @import "header";
-@import "about";
 @import "colors";
 @import "variables";
+@import "./sections/hero.scss";
+@import "./sections/about.scss";
 
-
-
-
-.hero {
-  .main__container {
-    @include mainContainer;
-  }
-}
-
-.hero__content-block {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
-  & .hero__content {
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
-    max-width: 619px;
-    & .hero__titles-items {
-      display: flex;
-      flex-direction: column;
-      gap: 40px;
-      & .hero__title {
-        color: $primary-dark-blue;
-        font: {
-          size: $primary-title;
-          weight: 700;
-        }
-        line-height: 130%;
-      }
-      & .hero__subTitle {
-        color: $primary-subTitile-gray;
-        font: {
-          size: $primary-subTitle;
-          weight: 500;
-        }
-        line-height: 150%;
-      }
-    }
-    & .choose {
-      max-width: 328px;
-      color: $primary-white;
-      font: {
-        size: $primary-button-size;
-        weight: 500;
-      }
-      line-height: 120%;
-      padding: 16px 32px;
-      border-radius: 25px 25px 25px 0px;
-      background: $primary-button-red;
-      box-shadow: 0px 0px 40px 0px $primary-button-shadow;
-    }
-  }
-  & .hero__image-block {
-    background: url(../images/hero/decor.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 106%;
-    & .animal__logo-item {
-      position: relative;
-      bottom: 20px;
-      width: 100%;
-      object-fit: cover;
-    }
-  }
+body {
+  font-family: "Open Sans", sans-serif;
 }
