--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,4 @@ $primary-title: 64px;
 $primary-subTitle: 30px;
 $primary-button-size: 36px;
 $primary-about-title: 56px;
+$primary-card-title: 40px;
