--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,8 @@
 @import "variables";
 @import "./sections/hero.scss";
 @import "./sections/about.scss";
+@import './sections/choose.scss';
+@import './sections//ourTerms.scss';
 
 body {
   font-family: "Open Sans", sans-serif;
