--- a/src/styles/sections/hero.scss
+++ b/src/styles/sections/hero.scss
@@ -11,7 +11,7 @@
 .hero__content-block {
   display: flex;
   justify-content: space-between;
-  padding-top: 40px;
+  margin-top: 40px;
   & .hero__content {
     display: flex;
     flex-direction: column;
