Add Location Section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,9 @@
 @import "variables";
 @import "./sections/hero.scss";
 @import "./sections/about.scss";
-@import './sections/choose.scss';
-@import './sections//ourTerms.scss';
+@import "./sections/choose.scss";
+@import "./sections//ourTerms.scss";
+@import "./sections/location.scss";
 
 body {
   font-family: "Open Sans", sans-serif;
