--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
 @import "./sections/choose.scss";
 @import "./sections//ourTerms.scss";
 @import "./sections/location.scss";
+@import './sections/contacts.scss';
+
 
 body {
   font-family: "Open Sans", sans-serif;
