--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,10 @@
 @import "./sections/choose.scss";
 @import "./sections//ourTerms.scss";
 @import "./sections/location.scss";
-@import './sections/contacts.scss';
+@import "./sections/contacts.scss";
+@import "./sections/howToHelp.scss";
+@import "./sections/footer.scss";
 
-
-body {
-  font-family: "Open Sans", sans-serif;
+.App {
+  font-family: "Poppins", sans-serif;
 }
